###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

"""
CyberRT
"""
module(
    name = "libcyber",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "grpc", version = "1.41.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")

