###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

"""
CyberRT
"""
module(
    name = "libcyber",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "grpc", version = "1.41.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")

bazel_dep(name = "gflags", version = "2.2.2", repo_name = "com_github_gflags_gflags")
bazel_dep(name = "glog", version = "0.5.0", repo_name = "com_github_google_glog")
bazel_dep(name = "googletest", version = "1.11.0", repo_name = "com_google_googletest")

# bazel_dep(name = "ncurses", version = "6.4.20221231", repo_name = "ncurses")
bazel_dep(name = "nlohmann_json", version = "3.11.3", repo_name = "com_github_nlohmann_json")
bazel_dep(name = "tinyxml2", version = "10.0.0")
bazel_dep(name = "libuuid", version = "2.39.3.bcr.1", repo_name = "uuid")
